<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tgtiger.cf.mylisttest.EditItemActivity"
    tools:showIn="@layout/activity_edit_item"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    >

    <TextView
        android:id="@+id/edit_textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_tip"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="3dp" />

    <EditText
        android:id="@+id/edit_editText1"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:background="#e6e6e6"
        android:ems="10"
        android:hint="@string/edit_editText_hint"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_textView1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <EditText
        android:id="@+id/plan_start_time"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#e6e6e6"
        android:ems="10"
        android:hint="@string/plan_start_time"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_editText1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <EditText
        android:id="@+id/plan_end_time"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#e6e6e6"
        android:ems="10"
        android:hint="@string/plan_end_time"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/plan_start_time"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <EditText
        android:id="@+id/people_number"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#e6e6e6"
        android:ems="10"
        android:hint="@string/people_number"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/plan_end_time"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <EditText
        android:id="@+id/pm_write_time"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#e6e6e6"
        android:ems="10"
        android:hint="@string/pm_write_time"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/people_number"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/edit_submit_btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/add_item_submit"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/pm_write_time"
        app:layout_constraintRight_toRightOf="@+id/pm_write_time"
        app:layout_constraintTop_toBottomOf="@+id/pm_write_time" />
</android.support.constraint.ConstraintLayout>
